Version 0.9.6 (beta)
  Bugfixes:
  - Fix a bug that causes a server crash when the PostgreSQL session is
    terminated if the only statements involving oracle_fdw during that
    session were CREATE statements.
    Per report from Bry Lo.

Version 0.9.5 (beta), released 2012-05-11
  Enhancements:
  - Support ANALYZE on foreign tables (from PostgreSQL 9.2 on).

  Bugfixes:
  - Fix a bug that leads to warnings and sometimes bad results if system
    columns of the foreign table are referenced.
  - Fix wrong column width estimates of plan_costs=on.

Version 0.9.4 (beta), released 2012-03-19
  Enhancements:
  - Support the new foreign data wrapper API introduced in 9.2.
    In PostgreSQL 9.2 and above, WHERE conditions that get pushed down to
    Oracle will not be checked a second time.
  - Improve error messages for errors during conversion of Oracle data
    so that the problem can be diagnosed.

  Bugfixes:
  - Fix uninitialized value that caused intermittent server crashes.
    Per report from Bruno Voigt.
  - Rework the handling of errors and transactions.  Now an error should not
    be able to cause an Oracle transaction to be left open.  This also fixes
    a bug introduced in 0.9.3 that prevented Oracle errors from being
    reported as DETAIL message.  Also, all foreign scans in one local query
    will now be executed within one Oracle transaction if they belong to
    the same Oracle session.
  - Rework memory management to exclude memory leaks under all circumstances.

Version 0.9.3 (beta), released 2012-02-07
  Enhancements:
  - Add support for PostgreSQL data type "uuid".

  Bugfixes:
  - After an error message, calls to the foreign server result in this error:
      error connecting to Oracle: OCITransStart failed to start a transaction
      ORA-01453: SET TRANSACTION must be first statement of transaction
    The problem is that the previous transaction was not closed.
    This used to go unnoticed, the problem now becomes manifest because we